<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context="com.clevertap.demo.MainActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:src="@drawable/logo"
        android:layout_width="fill_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/developer_clevertap_com"
        android:textColorLink="@color/colorPrimary"
        android:id="@+id/TextView1"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:autoLink="web"
        android:gravity="center_horizontal">
    </TextView>

    <Button
        android:id="@+id/event"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:text="Event" />
    <Button
        android:id="@+id/event_with_props"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:text="@string/event_with_properties" />
    <Button
        android:id="@+id/charged_event"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:text="@string/charged_event" />
    <Button
        android:id="@+id/profile_event"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:text="@string/profile_event" />
    <Button
        android:id="@+id/inbox"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:text="@string/inbox" />
    <Button
        android:id="@+id/web"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:text="@string/webview" />
</LinearLayout>
